Node.js.txt
Welcome to Node.js v24.13.1.
Type ".help" for more information.
> mkdir bilimapp-node
mkdir bilimapp-node
      ^^^^^^^^

Uncaught SyntaxError: Unexpected identifier 'bilimapp'
> cd bilimapp-node
cd bilimapp-node
   ^^^^^^^^

Uncaught SyntaxError: Unexpected identifier 'bilimapp'
> npm init -y
npm should be run outside of the Node.js REPL, in your normal shell.
(Press Ctrl+D to exit.)
> npm install express pg
npm should be run outside of the Node.js REPL, in your normal shell.
(Press Ctrl+D to exit.)
>
